rewrote previously delted files

--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Goran Topic",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "checklist-js": "^1.0.7",
+    "crawlee": "^3.4.0"
+  }
 }
