--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "data-minning_procesosjudiciales.funcionjudicial.gob.ec",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/main.js"
   },
   "author": "Goran Topic",
   "license": "ISC",
