working verion with proxies

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "checklist-js": "^1.1.9",
     "crawlee": "^3.4.0",
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "proxy-rotator-js": "^1.0.6"
   }
 }
