--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "checklist-js": "^1.1.9",
     "crawlee": "^3.4.0",
     "csv-parser": "^3.0.0",
-    "proxy-rotator-js": "^1.0.6"
+    "proxy-rotator-js": "^1.0.6",
+    "user-agents": "^1.0.1418"
   }
 }
