--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "crawlee": "^3.4.0",
     "csv-parser": "^3.0.0",
     "proxy-rotator-js": "^1.0.6",
+    "serialize-error": "^11.0.0",
+    "slavery-js": "^1.0.3",
     "user-agents": "^1.0.1418"
   }
 }
