--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --max-old-space-size=8192 ./src/main.js",
-    "slaves": "node ./src/main_slaves.js"
+    "master": "node ./src/master.js",
+    "slave": "node ./src/slave.js"
   },
   "author": "Goran Topic",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "proxy-rotator-js": "^1.0.6",
     "serialize-error": "^11.0.0",
     "slavery-js": "^1.3.2",
+    "storing-me": "^1.0.2",
     "user-agents": "^1.0.1418"
   }
 }
