--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "Goran Topic",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.5",
     "checklist-js": "^1.1.11",
     "crawlee": "^3.4.0",
     "csv-parser": "^3.0.0",
-    "proxy-rotator-js": "^1.0.6",
+    "proxy-rotator-js": "^1.0.8",
     "serialize-error": "^11.0.0",
     "slavery-js": "^1.3.4",
+    "storing-me": "^1.0.2",
     "user-agents": "^1.0.1418"
   }
 }
