--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "checklist-js": "^1.1.11",
     "crawlee": "^3.4.0",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.0",
     "proxy-rotator-js": "^1.0.8",
     "serialize-error": "^11.0.0",
     "slavery-js": "^1.3.4",
     "storing-me": "^1.0.2",
-    "user-agents": "^1.0.1418"
+    "user-agents": "^1.0.1418",
+    "waiting-for-js": "^1.0.3"
   }
 }
