--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha './test/**/*.test.js'",
     "start": "node --max-old-space-size=8192 ./src/main.js",
     "master": "node ./src/master.js",
     "slave": "node ./src/slave.js"
@@ -19,11 +19,22 @@
     "crawlee": "^3.4.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.0",
+    "dstore-js": "^1.0.9",
     "proxy-rotator-js": "^1.0.8",
     "serialize-error": "^11.0.0",
     "slavery-js": "^1.3.4",
     "storing-me": "^1.0.2",
     "user-agents": "^1.0.1418",
     "waiting-for-js": "^1.0.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
+  },
+  "devDependencies": {
+    "chai": "^5.1.2",
+    "mocha": "^11.0.1",
+    "sinon": "^19.0.2"
   }
 }
