--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.0",
     "dstore-js": "^1.0.9",
+    "https-proxy-agent": "^7.0.6",
     "proxy-rotator-js": "^1.0.8",
     "serialize-error": "^11.0.0",
     "slavery-js": "^1.3.4",
