fixed typo in docker compoase

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   procesosjudiciales-slave-service:
-    image: supercias
+    image: procesosjudiciales
     command: npm run slave
     network_mode: host
     restart: always
