--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "test": "mocha './test/**/*.test.js'",
-    "start": "node --max-old-space-size=8192 ./src/main.js",
-    "master": "node --max-old-space-size=8192 ./src/master.js",
-    "slave": "node ./src/slave.js"
+    "build": "tsc",
+    "test": "mocha './dist/test/**/*.test.js'",
+    "start": "npm run build && node --max-old-space-size=8192 ./dist/src/main.js",
+    "master": "npm run build && node --max-old-space-size=8192 ./dist/src/master.js",
+    "slave": "npm run build && node ./dist/src/slave.js",
+    "dev": "tsc -w"
   },
   "author": "Goran Topic",
   "license": "ISC",
@@ -23,10 +25,10 @@
     "https-proxy-agent": "^7.0.6",
     "proxy-rotator-js": "^1.0.8",
     "serialize-error": "^11.0.0",
-    "slavery-js": "^1.3.4",
     "storing-me": "^1.0.2",
     "user-agents": "^1.0.1418",
-    "waiting-for-js": "^1.0.3"
+    "waiting-for-js": "^1.0.3",
+    "xlsx": "^0.18.5"
   },
   "jest": {
     "moduleNameMapper": {
@@ -34,8 +36,15 @@
     }
   },
   "devDependencies": {
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.19",
+    "@types/sinon": "^17.0.3",
+    "@types/user-agents": "^1.0.4",
     "chai": "^5.1.2",
     "mocha": "^11.0.1",
-    "sinon": "^19.0.2"
+    "sinon": "^19.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
