--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node --max-old-space-size=8192 ./src/main.js",
     "master": "node --max-old-space-size=8192 ./src/master.js",
     "slave": "node ./src/slave.js",
+    "countJuicios": "node src/scraper/scrap_total_number_of_juiciosId.js",
     "test": "mocha --timeout 10000 './test/**/*.test.js'"
   },
   "author": "Goran Topic",
@@ -15,7 +16,7 @@
     "@zennolab_com/capmonstercloud-client": "^1.5.0",
     "axios": "^1.6.5",
     "axios-https-proxy-fix": "^0.17.1",
-    "checklist-js": "^1.1.11",
+    "axios-retry": "^4.5.0",
     "crawlee": "^3.4.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.0",
@@ -23,7 +24,7 @@
     "https-proxy-agent": "^7.0.6",
     "proxy-rotator-js": "^1.0.8",
     "serialize-error": "^11.0.0",
-    "slavery-js": "^1.3.4",
+    "slavery-js": "^2.1.0",
     "storing-me": "^1.0.2",
     "user-agents": "^1.0.1418",
     "waiting-for-js": "^1.0.3"
